[gd_scene load_steps=2 format=3 uid="uid://c68a42dp83gs"]

[ext_resource type="Script" uid="uid://0i3ku8hqw40j" path="res://Script/hurt_box.gd" id="1_uix4s"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_uix4s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DesabilitaTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DesabilitaTimer" to="." method="_on_desabilita_timer_timeout"]
